--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,12 @@ services:
       dockerfile: Dockerfile
     container_name: jw-hitster-app
     ports:
-      - "3000:3000"
+      - "3000"
     environment:
       - NODE_ENV=production
     restart: unless-stopped
+    networks:
+      - jw-network
     # Para desarrollo, descomenta lo siguiente:
     # volumes:
     #   - .:/app
@@ -18,3 +20,26 @@ services:
     # environment:
     #   - NODE_ENV=development
     # command: npm run dev
+
+  nginx:
+    image: nginx:alpine
+    container_name: jw-hitster-nginx
+    ports:
+      - "8081:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - app
+    restart: unless-stopped
+    networks:
+      - jw-network
+    healthcheck:
+      test: [ "CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health" ]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+
+networks:
+  jw-network:
+    driver: bridge
