feat: add external cloudflare_default network to docker-compose configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,10 @@ services:
     restart: unless-stopped
     networks:
       - jw-network
+      - cloudflare_default
 
 networks:
   jw-network:
     driver: bridge
+  cloudflare_default:
+    external: true
