feat: add GitHub Actions extension to VSCode customizations

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,8 @@
 		"vscode": {
 			"extensions": [
 				"ismola.ismola-extension-pack",
-				"lauren.react-pack"
+				"lauren.react-pack",
+				"github.vscode-github-actions"
 			]
 		}
 	}
