--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: jw-hitster-app
-    ports:
+    expose:
       - "3000"
     environment:
       - NODE_ENV=production
