feat: add Tailwind CSS extension to dev container for improved styling support

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,7 +33,8 @@
 			"extensions": [
 				"ismola.ismola-extension-pack",
 				"lauren.react-pack",
-				"github.vscode-github-actions"
+				"github.vscode-github-actions",
+				"bradlc.vscode-tailwindcss"
 			]
 		}
 	}
