--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "preview": "rm -rf .next && npm run build && npm run start",  
     "lint": "eslint",
     "lint:css": "stylelint '**/*.css'"
   },
