--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "preview": "rm -rf .next && npm run build && npm run start",  
+    "preview": "rm -rf .next && npm run build && npm run start",
     "lint": "eslint",
     "lint:css": "stylelint '**/*.css'"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.14.2",
