--- a/nginx.conf
+++ b/nginx.conf
@@ -29,6 +29,7 @@ server {
 
     # Proxy everything else to Next.js
     location / {
+        rewrite ^(.+)/$ $1 break;
         proxy_pass http://nextjs;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
